work/argocd/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-ui
  namespace: argocd
spec:
  hosts:
  - argocd.wdb.com.ua
  gateways:
  - gw
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
